# home_bank_converter

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
home_bank_converter/: __main__.py  converter.py  csv_dialects.py  csv_file_format.py  home_bank_fields.py
tests/: test_converter.py
