[metadata]
name = home_bank_converter
version = 0.2.0
url = https://github.com/FabianReister/home_bank_converter
license = GPL-3.0
author = Fabian Reister
author_email =
description = Converter for various online banking transaction files to be able to import them to HomeBank (http://homebank.free.fr)

[options]
packages = find:
python_requires = >=3.10
install_requires =
    datetime
    typing
    coloredlogs

[options.entry_points]
console_scripts =
    home_bank_converter = home_bank_converter.__main__:main